# ctransformers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  tests.yml
ctransformers/: __init__.py  hub.py  langchain.py  lib.py  llm.py  logger.py  transformers.py  utils.py
ctransformers/gptq/: __init__.py  hub.py  llm.py
ctransformers/lib/avx/: libctransformers.dylib
ctransformers/lib/avx2/: libctransformers.dylib
ctransformers/lib/basic/: libctransformers.dylib
models/: CMakeLists.txt  common.h  ggml.c  llm.cc  llm.h  main.cc
models/ggml/: cmpnct_unicode.cpp  cmpnct_unicode.h  ggml-cuda-ggllm.cu  ggml-cuda-ggllm.h  ggml-cuda.cu  ggml-cuda.h  ggml-ggllm.c  ggml-ggllm.h  ggml-metal.m  ggml.c  ggml.h  libfalcon.cpp  libfalcon.h  llama-ggml.cpp  llama-ggml.h  llama-util.h  llama.cpp
models/llms/: dolly.cc  falcon.cc  gpt-neox.cc  gpt2.cc  gptj.cc  llama-ggml.cc  llama.cc  mpt.cc  replit.cc  starcoder.cc
scripts/: build.sh  docs.py  release.sh  sync.sh
tests/: conftest.py  test_llm.py  test_model.py
